# cs4100-project

./: .gitignore  environment.yml  lightning.md  main.py  model.pt  model.py  proposal.md  results.md  setup.py  test.py
reversi_gym/: __init__.py
reversi_gym/envs/: __init__.py  minimax.py  perf_test.py  reversi.py
rust-reversi/: Cargo.toml  Makefile
rust-reversi/src/: assist.rs  lib.rs  logic.rs
trained/: model_cnn_0.002lrc_0.8d.pt  model_cnn_0.002lrd_0.08d.pt  model_cnn_0.002lrd_0.8d.pt  model_cnn_0.02lrd_0.08d.pt.pt  model_cnn_0.02lrd_0.8d.pt  model_cnn_0.2lrd_0.08d.pt.pt  model_cnn_lr0.2d_gamma0.8.pt  model_fc_0.002lrd_0.08d.pt  model_fc_0.002lrd_0.8d.pt  model_fc_0.02lrd_0.08d.pt  model_fc_0.02lrd_0.8d.pt  model_fc_0.2lrd_0.08d.pt  model_fc_0.2lrd_0.8d.pt
